2007-10-24  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/CatalogEntry.cs, MonoDevelop.Gettext/Catalog.cs:
	  Fixed re opened "Bug 335326 - Gettext addin breaks zh_CN.po".

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.GettextFeatureWidget.cs, gtk-gui/gui.stetic,
	  MonoDevelop.Gettext/GettextFeature.cs: Cosmetic changes in the feature
	  widget. Don't show scrollbars, just grow the list as new items are
	  added.
	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs: Cosmetic
	  fix.
	* MonoDevelop.Gettext.mdp: Updated.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Gettext.mdp: Project file names updated by change in MD path
	  functions.

2007-10-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  MonoDevelop.Gettext/CatalogEntry.cs: Optimized the speed a bit.

2007-10-22  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/gui.stetic, MonoDevelop.Gettext.mdp: Updated.
	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs: Some
	  cosmetic fixes.
	* MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs: Show all cell
	  renderers in a single column. Fixes some alignment issues in the tree.

2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationService.cs: Fixed "Bug 335335 - Gettext
	  addin: updating the translations of MD takes forever".

2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs:
	  Updating translations is now done async.

2007-10-22  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/CatalogParser.cs, MonoDevelop.Gettext/Catalog.cs:
	  Fixed "Bug 335326 - Gettext addin breaks zh_CN.po".
