@@ -51,10 +51,9 @@
 		<StockIcon stockid = "md-gettext-locale" resource = "locale_16x16.png" size = "Menu" />
 		<StockIcon stockid = "md-gettext-locale" resource = "locale_22x22.png" size = "Button" />
 		<StockIcon stockid = "md-gettext-locale" resource = "locale_32x32.png" size = "Dialog" />
-		<StockIcon stockid = "md-gettext-project" resource = "md-gettext-project_32.png" />
-		<StockIcon stockid = "md-gettext-project" resource = "md-gettext-project_16.png" size = "Menu" />
-		<StockIcon stockid = "md-gettext-project" resource = "md-gettext-project_22.png" size = "Button" />
-		<StockIcon stockid = "md-gettext-project" resource = "md-gettext-project_32.png" size = "Dialog" />
+		<StockIcon stockid = "md-gettext-project" icon = "md-project|res:gettext-overlay-16.png" size = "Menu" />
+		<StockIcon stockid = "md-gettext-project" icon = "md-project|res:gettext-overlay-32.png" size = "Dnd"/>
+		<StockIcon stockid = "md-gettext-project" icon = "md-project|res:gettext-overlay-32.png" size = "Dialog" />
 	</Extension>
 	
 	<Extension path = "/MonoDevelop/ProjectModel/Gui/Icons">
