@@ -5,7 +5,7 @@
 	<TemplateConfiguration>
 		<_Name>Translation Project</_Name>
 		<Category>MonoDevelop</Category>
-		<Icon>md-gettext-project</Icon>
+		<Icon>md-project|res:gettext-overlay-32.png</Icon>
 		<_Description>Creates a translation project.</_Description>
 	</TemplateConfiguration>
 	
